// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Autocomplete
    classes={
      Object {
        "autoComplete": "autoComplete",
        "droplist": "droplist",
      }
    }
    disableAutoComplete={false}
    droplistProps={
      Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      }
    }
    showInitialData={false}
    textfieldProps={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Jss(TextField)
          autoFocus={false}
          clear={false}
          counter={false}
          disabled={false}
          hjWhitelist={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClear={[Function]}
          onFocus={[Function]}
          onKeyUp={[Function]}
          onRef={[Function]}
          options={Array []}
          selectOnFocus={false}
          type="text"
          valueProp=""
        />,
        "",
      ],
      "className": "autoComplete",
      "id": undefined,
      "style": undefined,
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoFocus": false,
          "clear": false,
          "counter": false,
          "disabled": false,
          "hjWhitelist": true,
          "onBlur": [Function],
          "onChange": [Function],
          "onClear": [Function],
          "onFocus": [Function],
          "onKeyUp": [Function],
          "onRef": [Function],
          "options": Array [],
          "selectOnFocus": false,
          "type": "text",
          "valueProp": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Jss(TextField)
            autoFocus={false}
            clear={false}
            counter={false}
            disabled={false}
            hjWhitelist={true}
            onBlur={[Function]}
            onChange={[Function]}
            onClear={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            onRef={[Function]}
            options={Array []}
            selectOnFocus={false}
            type="text"
            valueProp=""
          />,
          "",
        ],
        "className": "autoComplete",
        "id": undefined,
        "style": undefined,
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoFocus": false,
            "clear": false,
            "counter": false,
            "disabled": false,
            "hjWhitelist": true,
            "onBlur": [Function],
            "onChange": [Function],
            "onClear": [Function],
            "onFocus": [Function],
            "onKeyUp": [Function],
            "onRef": [Function],
            "options": Array [],
            "selectOnFocus": false,
            "type": "text",
            "valueProp": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Autocomplete styles matches the snapshot 1`] = `
Object {
  "autoComplete": Object {
    "position": "relative",
  },
  "droplist": Object {
    "left": 0,
    "position": "absolute",
    "top": [Function],
    "width": "100%",
    "zIndex": 2,
  },
}
`;

exports[`AutocompleteJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Autocomplete)
    disableAutoComplete={false}
    droplistProps={
      Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      }
    }
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
    showInitialData={false}
    textfieldProps={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "autoComplete": "Autocomplete-autoComplete-0-1-77 Autocomplete-autoComplete-0-1-74",
        "droplist": "Autocomplete-droplist-0-1-76 Autocomplete-droplist-0-1-75",
      },
      "disableAutoComplete": false,
      "droplistProps": Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      },
      "items": Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ],
      "showInitialData": false,
      "textfieldProps": Object {},
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "autoComplete": "Autocomplete-autoComplete-0-1-77 Autocomplete-autoComplete-0-1-74",
          "droplist": "Autocomplete-droplist-0-1-76 Autocomplete-droplist-0-1-75",
        },
        "disableAutoComplete": false,
        "droplistProps": Object {
          "items": Array [
            Object {
              "id": 1,
              "text": "Administrador",
              "textRight": "(222)",
            },
            Object {
              "id": 2,
              "text": "Administrador Sr",
              "textRight": "(134)",
            },
            Object {
              "id": 3,
              "text": "Administrador Jr",
              "textRight": "(52)",
            },
            Object {
              "id": 4,
              "text": "Administrar",
              "textRight": "(6)",
            },
          ],
        },
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
        "showInitialData": false,
        "textfieldProps": Object {},
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
